# TEAM_SER_X_FEAR_BOT

./: .env.example  .gitignore  CHANGES.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-ci.yml
src/: main.py
src/team_ser_x_fear_bot/: __init__.py  __main__.py  bot.py  commands.py  core.py
src/team_ser_x_fear_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/team_ser_x_fear_bot/functions/: __init__.py  utils.py
src/team_ser_x_fear_bot/modules/: __init__.py  example_module.py
src/team_ser_x_fear_bot/system/: __init__.py  logger.py  venv.py
